--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
-    "express": "^4.16.3",
-    "if-env": "^1.0.4"
+    "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "if-env": "^1.0.4",
+    "mongoose": "^5.9.4",
+    "passport": "^0.4.1",
+    "passport-local-mongoose": "^6.0.1",
+    "react-router-dom": "^5.1.2"
   }
 }
