--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "if-env": "^1.0.4",
+    "mini-create-react-context": "^0.4.0",
     "mongoose": "^5.9.4",
     "passport": "^0.4.1",
     "passport-local-mongoose": "^6.0.1",
